--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title></title>
+    <title>Web Inspector</title> <!-- <-- Your title should not be empty -->
+
+    <!-- Add to Home Screen for iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Web Inspector">
+
+    <!-- Add to Home Screen for Android -->
+    <meta name="theme-color" content="#1c1c1e">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="icon.png"> <!-- optional but recommended -->
+</head>
     <style>
         /* --- Basic Setup & Variables --- */
         :root {
