--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@
       color: var(--text-color);
     }
 
-    /* Scrolled state */
-    #navbar.scrolled {
-      background-color: var(--navbar-scrolled-bg);
-      backdrop-filter: blur(20px);
-      -webkit-backdrop-filter: blur(20px);
-    }
+    /* Scrolled state */#navbar.scrolled {
+  background-color: rgba(28, 28, 30, 0.6); /* translucent */
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+}
 
     /* --- Main Content Area --- */
     #main-content {
