--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       --ios-blue: #007AFF;
       --bg-color: #000000;
       --text-color: #FFFFFF;
-      --text-color-secondary: rgba(255, 255, 255, 0.6);
+      --text-color-secondary: #9898a0;
       --separator-color: rgba(255, 255, 255, 0.2);
       --navbar-scrolled-bg: #1c1c1e;
       --highlight-bg: rgba(255, 255, 255, 0.1);
@@ -29,7 +29,7 @@
       --icon-size: 60px;
       --side-padding: 16px;
       --list-separator-height: 0.5px; /* updated */
-      --border-color: #303033;        /* new */
+      --border-color: #5a595f;        /* new */
     }
 
     body {
