--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       --bg-color: #000000;
       --text-color: #FFFFFF;
       --text-color-secondary: #9898a0;
-      --separator-color: rgba(255, 255, 255, 0.2);
+      --separator-color: #5a595f;
       --navbar-scrolled-bg: #1c1c1e;
       --highlight-bg: rgba(255, 255, 255, 0.1);
       --base-font-size: 17px;
