--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
       --border-color: #5a595f;        /* new */
     }
 
-    body {
+body {
   margin: 0;
   padding: 0;
-  background: rgba(255, 255, 255, 0.1); /* translucent */
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px); /* Safari */
+  background-color: var(--bg-color);
   color: var(--text-color);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: var(--base-font-size);
